fix: fixed homepage footer broken style

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -1,9 +1,3 @@
-html,
-body,
-main {
-  height: 100%;
-}
-
 body {
   align-items: center;
   background-color: #f5f5f5;
